# SculptLauncherApp

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: 功能建议-feature-request.yml  问题反馈-bug-report-.yml
app/: build.gradle.kts
app/src/androidTest/java/org/sculptlauncher/app/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/thelauncher/sculptlauncher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ModManifest.proto  mod_manifest.yaml
app/src/main/cpp/: CMakeLists.txt  app.cpp  main.cpp  nmod.cpp
app/src/main/cpp/api/: SculptAPI.h
app/src/main/cpp/header/: app.hpp
app/src/main/cpp/mod/: mod_main.cpp
app/src/main/java/org/sculptlauncher/app/: LauncherApp.kt  MainActivity.kt
app/src/main/java/org/thelauncher/sculptlauncher/: GamePlayActivity.kt  LauncherApp.kt  MainActivity.kt  StartActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: start_activity.xml
app/src/main/res/values/: ic_launcher_background.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/sculptlauncher/app/: ExampleUnitTest.kt
app/src/test/java/org/thelauncher/sculptlauncher/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
minecraft/: build.gradle.kts
minecraft/src/main/: AndroidManifest.xml
minecraft/src/main/res/layout/: change_friendship_dialog.xml  iconfont_toggle_btn_view.xml  profile_screen.xml
minecraft/src/main/res/values/: strings.xml
minecraftpe/: build.gradle.kts
minecraftpe/src/main/: AndroidManifest.xml
minecraftpe/src/main/java/org/fmod/: AudioDevice.java  FMOD.java  MediaCodec.java
minecraftpe/src/main/libs/: xbox-release.aar
minecraftpe/src/main/res/values/: strings.xml
xbox/: build.gradle.kts
xbox/src/main/: AndroidManifest.xml
xbox/src/main/java/com/microsoft/aad/adal/: IdToken.java  (+13 more)
(+327 files in other folders)
